--- a/hello world 2/assets/css/style.css
+++ b/hello world 2/assets/css/style.css
@@ -2,14 +2,76 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
-    background: linear-gradient(to left,#87EFF6,#FFFFFF);
+    background: linear-gradient(to left, #87EFF6, #FFFFFF);
 }
 
 header {
     display: flex;
     justify-content: space-between;
     padding: 40px 80px;
+
+    & .navbar ul {
+        display: flex;
+        gap: 50px;
+
+        & li a {
+            color: #000;
+        }
+    }
+}
+
+main {
+    padding: 40px 80px 40px 80px;
+
+    & section {
+        display: flex;
+
+        & .lado-esquerdo {
+            display: flex;
+            flex-direction: column;
+            gap: 58px;
+
+            & .content {
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+
+                & h1 {
+                    font-size: 36px;
+                }
+            }
+
+            & .content p:first-child {
+                color: rgb(238, 13, 13);
+                font-size: 20px;
+            }
+
+            & .btns {
+                display: flex;
+                gap: 16px;
+
+                & button {
+            
+                    border-radius: 16px;
+                    background-color: #4ABBC2;
+                    padding: 14px 20px;
+                    border: none;
+                    font-weight: 700;
+                }
+            }
+           & button:last-child {
+            color: #4ABBC2;
+            background-color: transparent;
+            border: solid 2px #4ABBC2;
+
+           }
+        }
+
+    }
 }
